force-app/main/default/objects/Account/fields/CasesEscalated__c.field-meta.xml
<CustomField>
    <fullName>CasesEscalated__c</fullName>
    <label>CasesEscalated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>