force-app/main/default/objects/Account/fields/CasesNew__c.field-meta.xml
<CustomField>
    <fullName>CasesNew__c</fullName>
    <label>CasesNew</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>