force-app/main/default/objects/Account/fields/CasesWorking__c.field-meta.xml
<CustomField>
    <fullName>CasesWorking__c</fullName>
    <label>CasesWorking</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>