force-app/main/default/objects/Account/fields/CloseOpps__c.field-meta.xml
<CustomField>
    <fullName>CloseOpps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CloseOpps</label>
    <type>Checkbox</type>
</CustomField>