force-app/main/default/objects/Account/fields/Lastest_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Lastest_Case_Number__c</fullName>
    <label>Lastest Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>