force-app/main/default/objects/Account/fields/OppLineItems__c.field-meta.xml
<CustomField>
    <fullName>OppLineItems__c</fullName>
    <label>OppLineItems</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>